--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "build": "npm run clean && ./node_modules/.bin/tsc",
     "start": "node dist/index.js",
@@ -39,6 +40,7 @@
   },
   "dependencies": {
     "express": "^5.1.0",
-    "joi": "^18.0.1"
+    "joi": "^18.0.1",
+    "pg": "^8.16.3"
   }
 }
