--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "type": "module",
   "scripts": {
     "build": "npm run clean && ./node_modules/.bin/tsc",
     "start": "node dist/index.js",
@@ -30,6 +29,7 @@
     "@types/express": "^5.0.4",
     "@types/jest": "^30.0.0",
     "@types/node": "^24.9.1",
+    "@types/pg": "^8.15.6",
     "@typescript-eslint/eslint-plugin": "^8.46.2",
     "@typescript-eslint/parser": "^8.46.2",
     "eslint": "^9.38.0",
